Bug 1211328 - [MSE] Fix timestampOffset attribute calculation in sequence mode. r=gerald, a=sylestre